perl6-idea-plugin/testData/highlight/User.rakumod
use Base;

sub <weak_warning descr="Unused subroutine">foo</weak_warning> {}
<error descr="Re-declaration of C from Base.rakumod:3">class C</error> {}
